implemented all the functionality

--- a/manifest.json
+++ b/manifest.json
@@ -1,14 +1,14 @@
 {
-    "short_name": "restaurantapp-s2",
+    "short_name": "mwsapp-s2",
     "name": "udacity-mws-restaurant-stage-2",
     "icons": [
       {
-        "src": "/images/icons-192.png",
+        "src": "/img/icons-192.jpg",
         "type": "image/png",
         "sizes": "192x192"
       },
       {
-        "src": "/images/icons-512.png",
+        "src": "/img/icons-512.jpg",
         "type": "image/png",
         "sizes": "512x512"
       }
@@ -16,7 +16,7 @@
     "start_url": "/index.html",
     "background_color": "#3367D6",
     "display": "standalone",
-    "scope": "/maps/",
+    "scope": "/index.html",
     "theme_color": "#3367D6",    
     "default_locale": "en",
     "description": "Udacity MWS Nanodegree Restaurant Project Stage 2",
